--- a/piercing.css
+++ b/piercing.css
@@ -1,8 +1,8 @@
 .piercing-title {
-    background-color: #FFD9D4;
+    background-color: #0A1D29 ;
     padding: 50px 0px;
     text-align: center;
-    color: #111;
+    color: #fff;
 }
 .piercing-title h1 {
     font-size: 24px;
